fix: fix align-text and align-items in all pages

--- a/online-zoo/pages/donate/style.css
+++ b/online-zoo/pages/donate/style.css
@@ -119,7 +119,6 @@ h1 {
     line-height: 47px;
     color: #FE9013;
     margin-bottom: 60px;
-    margin-left: 0;
 }
 .bg {
     padding: 40px 92px 62px 92px;
